[gd_scene load_steps=6 format=3 uid="uid://2p6lj4tqjqww"]

[ext_resource type="Script" uid="uid://c0lauqcp4054k" path="res://scenes/snake_skin_panel/snake_skin_panel.gd" id="1_7rjww"]
[ext_resource type="PackedScene" uid="uid://dbq1olpjwj3my" path="res://scenes/snake_skin_displayer/snake_skin_displayer.tscn" id="1_o5gjp"]
[ext_resource type="FontFile" uid="uid://cxaq1lpo2t7ho" path="res://fonts/black_charcoal.TTF" id="3_41eqd"]

[sub_resource type="FontVariation" id="FontVariation_o5gjp"]
base_font = ExtResource("3_41eqd")
baseline_offset = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o5gjp"]
bg_color = Color(0.682353, 0.584314, 0.447059, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.0745098, 0.423529, 0.105882, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="SnakeSkinPanel" type="Control"]
custom_minimum_size = Vector2(200, 170)
layout_mode = 3
anchors_preset = 0
offset_right = 156.0
offset_bottom = 142.0
size_flags_vertical = 4
script = ExtResource("1_7rjww")

[node name="SkinSelectButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(0.0745098, 0.423529, 0.105882, 1)
theme_override_colors/font_color = Color(0.0745098, 0.423529, 0.105882, 1)
theme_override_colors/font_focus_color = Color(0.0745098, 0.423529, 0.105882, 1)
theme_override_colors/font_pressed_color = Color(0.0745098, 0.423529, 0.105882, 1)
theme_override_constants/outline_size = 7
theme_override_fonts/font = SubResource("FontVariation_o5gjp")
theme_override_font_sizes/font_size = 35
theme_override_styles/focus = SubResource("StyleBoxFlat_o5gjp")
theme_override_styles/hover = SubResource("StyleBoxFlat_o5gjp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_o5gjp")
theme_override_styles/normal = SubResource("StyleBoxFlat_o5gjp")

[node name="CenterContainer" type="CenterContainer" parent="SkinSelectButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = -76.0
offset_right = 72.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="SnakeSkinDisplayer" parent="SkinSelectButton/CenterContainer" instance=ExtResource("1_o5gjp")]
unique_name_in_owner = true
custom_minimum_size = Vector2(144, 96)
layout_mode = 2

[connection signal="skin_selected" from="." to="." method="_on_skin_select_button_pressed"]
